# doddq

./: .gitignore  LICENSE.md  README.md  setup.cfg
rodeo-arena/src/: main.py
src/doddq/: helpers.py  qpe.py
tests/: main.py
