[metadata]
name = doddq
version = 1.4
author = Tom Dodd
author_email = joedodd35@gmail.com
description = A simple library for use with Qiskit. Requires NumPy!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomdodd4598/doddq
project_urls =
    Issues = https://github.com/tomdodd4598/doddq/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
